grafana-deployment.yaml
---
# mysql-grafana service
apiVersion: v1
kind: Service
metadata:
  name: mysql-grafana
  labels:
    service: mysql-grafana
spec:
  ports:
  - port: 3310
    targetPort: 3306
  selector:
    service: mysql-grafana
---
#Grafana service
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: speedrun-application
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '3000'
spec:
  selector: 
    app: grafana
  type: NodePort  
  ports:
    - port: 3000
      targetPort: 3000
---
#mysql-grafana deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-grafana
  labels:
    service: mysql-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mysql-grafana
  template:
    metadata:
      labels:
        service: mysql-grafana
    spec:
      containers:
      - name: mysql-grafana
        image: mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-grafana-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-grafana-data
        persistentVolumeClaim:
          claimName: mysql-grafana-data
---
#Grafana deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: speedrun-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - name: grafana
          containerPort: 3000
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests: 
            memory: 500M
            cpu: "500m"
        volumeMounts:
          - name: mysql-grafana-data
            mountPath: /var/lib/mysql
          - mountPath: /etc/grafana/provisioning/datasources
            name: grafana-datasources
            readOnly: false
      volumes:
        - name: mysql-grafana-data
          persistentVolumeClaim:
            claimName: mysql-grafana-data
        - name: grafana-datasources
          configMap:
              defaultMode: 420
              name: grafana-datasources
