manifest.yml
# mongo-games service
apiVersion: v1
kind: Service
metadata:
  name: mongo-games
  labels:
    service: mongo-games
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    service: mongo-games
---
# mysql-speedrun service
apiVersion: v1
kind: Service
metadata:
  name: mysql-speedrun
  labels:
    service: mysql-speedrun
spec:
  ports:
  - port: 3308
    targetPort: 3306
  selector:
    service: mysql-speedrun
---
# mysql-profile service
apiVersion: v1
kind: Service
metadata:
  name: mysql-profile
  labels:
    service: mysql-profile
spec:
  ports:
  - port: 3307
    targetPort: 3306
  selector:
    service: mysql-profile
---
# game-service service
apiVersion: v1
kind: Service
metadata:
  name: game-service
  labels:
    service: game-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    service: game-service
---
# profile-service service
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  labels:
    service: profile-service
spec:
  ports:
  - port: 8082
    targetPort: 8082
  selector:
    service: profile-service
---
# speedrun-service service
apiVersion: v1
kind: Service
metadata:
  name: speedrun-service
  labels:
    service: speedrun-service
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    service: speedrun-service
---
# gateway-service service
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  labels:
    service: api-gateway-service
spec:
  type: NodePort
  ports:
  - port: 8085
    targetPort: 8085
  selector:
    service: api-gateway-service
---
# Deployments
# mongo-games deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-games
  labels:
    service: mongo-games
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongo-games
  template:
    metadata:
      labels:
        service: mongo-games
    spec:
      containers:
      - name: mongo-games
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-game-data
          mountPath: /data/db
      volumes:
      - name: mongodb-game-data
        persistentVolumeClaim:
          claimName: mongodb-game-data
---
# mysql-speedrun deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-speedrun
  labels:
    service: mysql-speedrun
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mysql-speedrun
  template:
    metadata:
      labels:
        service: mysql-speedrun
    spec:
      containers:
      - name: mysql-speedrun
        image: mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-speedrun-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-speedrun-data
        persistentVolumeClaim:
          claimName: mysql-speedrun-data
---
# mysql-profile deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-profile
  labels:
    service: mysql-profile
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mysql-profile
  template:
    metadata:
      labels:
        service: mysql-profile
    spec:
      containers:
      - name: mysql-profile
        image: mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-profile-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-profile-data
        persistentVolumeClaim:
          claimName: mysql-profile-data
---
# game-service deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service
  labels:
    service: game-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: game-service
  template:
    metadata:
      labels:
        service: game-service
    spec:
      containers:
      - name: game-service
        image: r0900099/game-service
        ports:
        - containerPort: 8080
---
# profile-service deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service
  labels:
    service: profile-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: profile-service
  template:
    metadata:
      labels:
        service: profile-service
    spec:
      containers:
      - name: profile-service
        image: r0900099/profile-service
        ports:
        - containerPort: 8082
---
# speedrun-service deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedrun-service
  labels:
    service: speedrun-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: speedrun-service
  template:
    metadata:
      labels:
        service: speedrun-service
    spec:
      containers:
      - name: speedrun-service
        image: r0900099/speedrun-service
        ports:
        - containerPort: 8081
---
# api-gateway-service deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-service
  labels:
    service: api-gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: api-gateway-service
  template:
    metadata:
      labels:
        service: api-gateway-service
    spec:
      containers:
      - name: api-gateway-service
        image: r0900099/api-gateway
        ports:
        - containerPort: 8085
---
#Ingress
#Api-gateway ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-service-ingress
  namespace: speedrun-application
spec:
  rules:
    - host: speedrun.com
      http:
        paths:
          - pathType: Prefix
            path: /  # Define the path to your service
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8085  # Target port of your service
---
